[gd_scene load_steps=12 format=3 uid="uid://d4l3bh8sq5hjr"]

[ext_resource type="Script" path="res://src/game/document.gd" id="1_q4ht6"]
[ext_resource type="Texture2D" uid="uid://bi677bl6yv3en" path="res://assets/sprites/Document.png" id="1_qjb0l"]
[ext_resource type="Shader" path="res://src/base-system/shaders/outline.gdshader" id="2_i3de4"]
[ext_resource type="PackedScene" uid="uid://bsqd2cat5u4yp" path="res://src/ui/typed_word.tscn" id="4_jmrhn"]
[ext_resource type="Script" path="res://src/RandomPitchShift.gd" id="6_8ppqs"]
[ext_resource type="AudioStream" uid="uid://c8rl1qr4vjn25" path="res://assets/sound/paper.mp3" id="7_1wga7"]
[ext_resource type="AudioStream" uid="uid://d3oql1wjpr4ip" path="res://assets/sound/paper-flip.mp3" id="8_hnjsk"]
[ext_resource type="Script" path="res://src/game/stain_detector.gd" id="9_fr0li"]
[ext_resource type="AudioStream" uid="uid://ji7etef3kh3s" path="res://assets/sound/紙を広げる2.mp3" id="9_uw5yq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pxbm0"]
shader = ExtResource("2_i3de4")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 2.0
shader_parameter/pattern = 2
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/enable = true

[sub_resource type="CircleShape2D" id="CircleShape2D_gugjj"]
radius = 23.0868

[node name="Document" type="Node2D"]
process_mode = 3
script = ExtResource("1_q4ht6")

[node name="MistakeThrottleTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_pxbm0")
texture = ExtResource("1_qjb0l")

[node name="TypingLabel" parent="Sprite2D" instance=ExtResource("4_jmrhn")]
offset_left = -42.0
offset_top = 0.5
offset_right = 0.0
offset_bottom = 24.5
theme_override_font_sizes/normal_font_size = 20
text = "[outline_color=ffffffff][center][typed until=0 height=2 frequency=8 highlight_falloff=20 highlight_normal=353540ff][color=353540ff][outline_color=ffffffff][/outline_color][/color][color=6f6c70ff][shake rate=0 level=0][outline_color=ffffff00][outline_size=5]a[/outline_size][/outline_color][/shake][outline_color=ffffff00][outline_size=5]sd[/outline_size][/outline_color][/color][/typed][/center][/outline_color]"
height = 2.0
highlight_first = false

[node name="MistakeLines" type="Control" parent="Sprite2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -21.0
offset_top = 29.0
offset_right = 19.0
offset_bottom = 69.0

[node name="ColorRect" type="ColorRect" parent="Sprite2D/MistakeLines"]
layout_mode = 0
offset_left = 33.0
offset_top = -34.0
offset_right = 38.0
offset_bottom = -32.0
rotation = 1.309
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="ColorRect9" type="ColorRect" parent="Sprite2D/MistakeLines"]
layout_mode = 0
offset_left = 28.0
offset_top = -41.0
offset_right = 34.0
offset_bottom = -39.0
rotation = 1.83259
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="ColorRect2" type="ColorRect" parent="Sprite2D/MistakeLines"]
layout_mode = 0
offset_left = 13.0
offset_top = -22.0
offset_right = 18.0
offset_bottom = -20.0
rotation = 1.83259
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="ColorRect3" type="ColorRect" parent="Sprite2D/MistakeLines"]
layout_mode = 0
offset_left = 15.0
offset_top = -46.0
offset_right = 20.0
offset_bottom = -44.0
rotation = 0.785397
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="ColorRect4" type="ColorRect" parent="Sprite2D/MistakeLines"]
layout_mode = 0
offset_left = 27.0
offset_top = -17.0
offset_right = 32.0
offset_bottom = -15.0
rotation = 1.0472
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="ColorRect5" type="ColorRect" parent="Sprite2D/MistakeLines"]
layout_mode = 0
offset_left = 29.0
offset_top = -53.0
offset_right = 34.0
offset_bottom = -51.0
rotation = 1.0472
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="ColorRect8" type="ColorRect" parent="Sprite2D/MistakeLines"]
layout_mode = 0
offset_left = 18.0
offset_top = -51.0
offset_right = 23.0
offset_bottom = -47.0
rotation = 2.09439
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="ColorRect7" type="ColorRect" parent="Sprite2D/MistakeLines"]
layout_mode = 0
offset_left = 26.0
offset_top = -30.0
offset_right = 31.0
offset_bottom = -26.0
rotation = 1.0472
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="ColorRect6" type="ColorRect" parent="Sprite2D/MistakeLines"]
layout_mode = 0
offset_left = 14.0
offset_top = -34.0
offset_right = 19.0
offset_bottom = -31.0
rotation = 1.83259
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="ColorRect10" type="ColorRect" parent="Sprite2D/MistakeLines"]
layout_mode = 0
offset_left = 19.0
offset_top = -10.0
offset_right = 24.0
offset_bottom = -7.00001
rotation = 1.83259
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="ColorRect11" type="ColorRect" parent="Sprite2D/MistakeLines"]
layout_mode = 0
offset_left = 37.0
offset_top = -46.0
offset_right = 42.0
offset_bottom = -43.0
rotation = 1.83259
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="ColorRect12" type="ColorRect" parent="Sprite2D/MistakeLines"]
layout_mode = 0
offset_left = 36.0
offset_top = -22.0
offset_right = 41.0
offset_bottom = -19.0
rotation = 1.57079
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="ColorRect13" type="ColorRect" parent="Sprite2D/MistakeLines"]
layout_mode = 0
offset_left = 9.0
offset_top = -41.0
offset_right = 14.0
offset_bottom = -38.0
rotation = 1.57079
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="ColorRect14" type="ColorRect" parent="Sprite2D/MistakeLines"]
layout_mode = 0
offset_left = 31.0
offset_top = -10.0
offset_right = 36.0
offset_bottom = -7.0
rotation = 1.57079
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="ColorRect15" type="ColorRect" parent="Sprite2D/MistakeLines"]
layout_mode = 0
offset_left = 27.0
offset_top = -23.0
offset_right = 32.0
offset_bottom = -20.0
rotation = 1.83259
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="ColorRect16" type="ColorRect" parent="Sprite2D/MistakeLines"]
layout_mode = 0
offset_left = 7.0
offset_top = -17.0
offset_right = 12.0
offset_bottom = -14.0
rotation = 1.309
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="ColorRect17" type="ColorRect" parent="Sprite2D/MistakeLines"]
layout_mode = 0
offset_left = 27.0
offset_top = -47.0
offset_right = 32.0
offset_bottom = -44.0
rotation = 1.57079
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
scale = Vector2(2.5, 3.2)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -41.0
offset_top = -55.0
offset_right = 41.0
offset_bottom = 56.0

[node name="PaperMoveIn" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("7_1wga7")
bus = &"SFX"
script = ExtResource("6_8ppqs")

[node name="PaperMoveOut" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("8_hnjsk")
bus = &"SFX"
script = ExtResource("6_8ppqs")

[node name="PaperSort" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("9_uw5yq")
volume_db = -10.0
bus = &"SFX"

[node name="StainDetector" type="Area2D" parent="."]
visible = false
collision_mask = 0
script = ExtResource("9_fr0li")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StainDetector"]
shape = SubResource("CircleShape2D_gugjj")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
